rusty-cdk-macros/tests/fails/memory_too_low.rs
use rusty_cdk_macros::memory;

fn example() {
    let mem = memory!(64);
}

fn main() {}